test/tests/stages/5_local_variables/valid/local_var_missing_return.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[18]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(3)
  ;
  identifier(a)
  =
  identifier(a)
  +
  const int(5)
  ;
  }
