test/tests/stages/5_local_variables/invalid_semantics/mixed_precedence_assignment.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(1)
  ;
  int
  identifier(b)
  =
  const int(2)
  ;
  identifier(a)
  =
  const int(3)
  *
  identifier(b)
  =
  identifier(a)
  ;
  }
